--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -14,7 +14,7 @@
     <ul>
         <% skills.forEach(function(s, idx) { %>
         <li>
-            <form action="/todos/<%= idx %>?_method=DELETE" class="delete-form" method="POST">
+            <form action="/skills/<%= idx %>?_method=DELETE" class="delete-form" method="POST">
                 <button type="submit">X</button>
             </form>
             <a href="/skills/<%= idx %>"><%= s.skill %></a>
